# Gridix-infra

./: .env.chain.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: Dockerfile  README.md  agent.py  docker-socket-proxy.yml  gpu_benchmark.py  gridix-agent.service  install.sh  requirements.txt
agent/bench/: Dockerfile  bench_gemm.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_provider_presence.py  0003_provider_path.py  0004_job_exposed_port.py  0005_bandwidth_events.py  0006_upload_sessions.py  0007_provider_artifacts.py  0008_job_data_tier.py  0009_job_wrapped_key.py  0010_provider_tee.py  0011_disputes.py  0012_dispute_evidence_hash.py  0013_benchmark_reports.py  0014_provider_health.py  0015_benchmark_fingerprint.py  0016_audit_log.py  0017_wallet_auth.py  0018_provider_models.py  0019_ledger_tx_hash.py  0020_providers_wallet_address.py  0021_chain_settlement_tables.py  0022_unique_index_fixes.py  0023_api_key_kind.py  0024_free_tier_usage.py  0025_providers_wallet_not_null.py
api/app/: adjudicate.py  alerts.py  antispoof.py  assignment.py  attestation.py  audit_log.py  bandwidth.py  benchmark.py  canary.py  catalog.py  chain_worker.py  chunked.py  config.py  crypto.py  db.py  deps.py  dispatch.py  disputes.py  errors.py  fraud_proof.py  free_capacity.py  free_tier.py  health.py  image_artifacts.py  key_broker.py  ledger.py  logging.py  main.py  matcher.py  models.py  moderation.py  net_security.py  node_usage.py  paths.py  payments.py  peer_distribution.py  penalties.py  presence.py  pricing.py  quorum.py  (+17 more)
api/app/chain/: __init__.py  bootstrap.py  client.py  fake.py  provider.py  reconcile.py  registry.py  settlement.py  signer.py  units.py  watcher.py
api/app/routes/: agent.py  api_keys.py  auth.py  billing.py  blobs.py  disputes.py  endpoints.py  events.py  health.py  inference.py  jobs.py  metrics.py  providers.py  public.py  registration.py  uploads.py
api/scripts/: dump_openapi.py
contracts/: .env.example  .gitignore  EVIDENCE.md  README.md  foundry.toml  lcov.info
contracts/script/: Deploy.s.sol  DeployStaking.s.sol  Exercise.s.sol
contracts/src/: GridixEscrow.sol  GridixStaking.sol
contracts/test/: GridixEscrow.t.sol  GridixStaking.t.sol
contracts/test/mocks/: MockUSDC.sol  ReentrantToken.sol
docker/: entrypoint.sh
docs/: BRANCH_PROTECTION.md  DEPLOY.md  DR.md  RUNBOOKS.md  SETTLEMENT.md  THREAT_MODEL.md  VAULT.md
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  DEPLOY.md  Dockerfile  PERFORMANCE.md  SECURITY.md  eslint.config.mjs  next.config.ts  openapi.snapshot.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: a11y.spec.ts  auth.spec.ts  failures.spec.ts  happy-path.spec.ts  links.spec.ts  onboarding.spec.ts  public-playground.spec.ts  responsive.spec.ts  security.spec.ts  support.ts  wallet.spec.ts  wallet.ts
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(provider)/: layout.tsx
frontend/src/app/(public)/: layout.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/app/: AppHeader.tsx  ConnectivityBanner.tsx  GettingStarted.tsx  JobInputField.test.tsx  JobInputField.tsx  JobsList.tsx  OfflineBanner.tsx
frontend/src/components/billing/: LedgerHistory.tsx  PeriodSummary.tsx  Reconciliation.tsx
frontend/src/lib/: pricing.test.ts  pricing.ts
image_server/: README.md  conftest.py  requirements.txt
image_server/gridix_image_server/: __init__.py  server.py
image_server/tests/: test_server.py
node/: README.md  conftest.py  requirements.txt
node/gridix_node/: __init__.py  client.py
node/tests/: test_node.py
obs/: EVIDENCE.md  alert_sink.py  docker-compose.obs.yml
obs/alertmanager/: alertmanager.yml
obs/grafana/dashboards/: gridix.json
obs/prometheus/: alerts.yml  prometheus.yml
ops/: DR_EVIDENCE.md  backup.env.example  backup.sh  gridix-backup.service  gridix-backup.timer  restore.sh  verify_restore.py
smoke/: Dockerfile  README.md  SOCKET_PROXY_EVIDENCE.md  chaos_load.sh  chaos_report.py  demo_reassign.sh  docker-compose.restore.yml  docker-compose.s3.yml  docker-compose.smoke.yml  drive_settlement_engine_sepolia.py  drive_settlement_sepolia.py  drive_smoke.py  inspect_hardening.sh  onboard_provider.py  reconcile_prod_readonly.py  register_developer.py  run_hardening.sh  run_on_host.sh  run_s3_e2e.sh  s3_integration.py  seed_stake.py  socket_proxy_run.txt  verify_socket_proxy.sh
smoke/scripts/: midwork.py  netprobe.py  run.py  sleeper.py  slowwork.py
smoke/vault/: gridix-read.hcl  provision.sh  verify_coordinator_wiring.py  verify_live.py  verify_vault_signs_writes.py
tests/: conftest.py  test_agent_gpu_benchmark.py  test_bill_never_exceeds_the_gate.py  test_chain_worker.py  test_dispatch.py  test_image_generation.py  test_image_reply_is_hostile.py  test_image_requires_wallet.py  test_inference.py  test_inference_guards.py  test_migration_column_drift.py  test_migration_schema_drift.py  test_node_reply_is_hostile.py  test_openai_response_contract.py  test_openai_sdk_compatibility.py  test_pentest_wave0.py  test_pentest_wave1.py  test_pentest_wave2.py  test_pentest_wave3.py  test_pentest_wave3_signer.py  test_programmatic_api_keys.py  test_prompt_bound_pays_honest_nodes.py  test_provider_wallet_auth.py  test_public_playground.py  test_realtime_events.py  test_relay_hardening.py  test_relay_models.py  test_relay_presence_refresh.py  test_security_wave1.py  test_security_wave2.py  test_security_wave3.py  test_session10_adjudicate.py  test_session10_billing.py  test_session10_disputes.py  test_session10_escalation.py  test_session10_evidence.py  test_session10_fraud_proof.py  test_session10_penalties.py  test_session10_revote.py  test_session11_antispoof.py  (+43 more)
tests/integration/: test_chaos.py  test_full_flow.py  test_postgres_overdraw.py  test_postgres_predispatch_hold.py
(+132 files in other folders)
