[project]
name = "gridix"
version = "0.1.0"
description = "GRIDIX — decentralized AI compute network (backend control plane)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]
agent = [
    "httpx>=0.27",
    "docker>=7.0",
    "loguru>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The control-plane package `app` lives under api/ (per repo layout). The provider
# agent is a standalone script (agent/) with its own Dockerfile, not part of this
# installable distribution.
[tool.setuptools]
package-dir = { "" = "api" }

[tool.setuptools.packages.find]
where = ["api"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["api", "tests", "agent"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient warns about httpx; not actionable in our code.
    "ignore:Using `httpx` with `starlette.testclient`:UserWarning",
    "ignore::DeprecationWarning:starlette.*",
]
