[project]
name = "gridix"
version = "0.1.0"
description = "GRIDIX — decentralized AI compute network (backend control plane)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]
# S3 / S3-compatible (MinIO) blob storage backend. Install with `.[s3]` when
# GRIDIX_STORAGE_BACKEND=s3 (the S3ObjectStore imports aioboto3 lazily).
s3 = [
    "aioboto3>=13",
]
# On-chain settlement (Session 13). Install with `.[chain]` when GRIDIX_CHAIN_ENABLED=true
# (the Web3ChainClient imports web3/eth-account lazily; the hermetic suite never needs them).
chain = [
    "web3>=6.15",
]
# HashiCorp Vault secret backend (12.1 seam, now real). Install with `.[vault]` when
# GRIDIX_SECRET_BACKEND=vault (VaultSecretManager imports hvac lazily; env/file need nothing).
vault = [
    "hvac>=2.1",
]
agent = [
    "httpx>=0.27",
    "docker>=7.0",
    "loguru>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The control-plane package `app` lives under api/ (per repo layout). The provider
# agent is a standalone script (agent/) with its own Dockerfile, not part of this
# installable distribution.
[tool.setuptools]
package-dir = { "" = "api" }

[tool.setuptools.packages.find]
where = ["api"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["api", "tests", "agent"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient warns about httpx; not actionable in our code.
    "ignore:Using `httpx` with `starlette.testclient`:UserWarning",
    "ignore::DeprecationWarning:starlette.*",
]
